# mlops_project

./: .dockerignore  .env_example  .gitignore  Dockerfile.airflow  README.md  docker-compose.airflow.yaml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
app/: __init__.py  main.py
dags/: ml_pipeline_dag.py
src/: __init__.py  register_artifacts.py
src/data_loading/: load_data.py
src/model_evaluation/: evaluate_model.py
src/model_training/: train_model.py
